# iocsift

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: sample_log.txt
src/iocsift/: __init__.py  __main__.py  cli.py  defang.py  enrich.py  extract.py  models.py
tests/: test_defang.py  test_enrich.py  test_extract.py
